# VideoExtractMCP

./: README.md  main.py  pyproject.toml
src/: server.py  utils.py
tests/: test.py
