[project]
name = "videoextractmcp"
version = "0.0.1"
description = "Video Extract MCP is a tool for extracting video frames and metadata using the FastMCP library."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "faster-whisper>=1.2.1",
    "fastmcp>=3.0.0b1",
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
    "scenedetect[opencv]>=0.6.5",
]
